--- a/Scribe/Components/UITableViewCells/AboutTableViewCell.xib
+++ b/Scribe/Components/UITableViewCells/AboutTableViewCell.xib
@@ -12,58 +12,96 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="132" id="KGk-i7-Jjw" customClass="AboutTableViewCell" customModule="Scribe" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="486" height="132"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="120" id="KGk-i7-Jjw" customClass="AboutTableViewCell" customModule="Scribe" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="486" height="120"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="486" height="132"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM" userLabel="ContentView">
+                <rect key="frame" x="0.0" y="0.0" width="486" height="120"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AJP-R8-VkX">
-                        <rect key="frame" x="50" y="53" width="428" height="26"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AJP-R8-VkX" userLabel="TitleLabelPad">
+                        <rect key="frame" x="68" y="12" width="410" height="48"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="26" id="W9s-aE-Zx6"/>
+                            <constraint firstAttribute="height" constant="48" id="W9s-aE-Zx6"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="24"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="MSu-WY-MCY" userLabel="IconImageViewPad">
+                        <rect key="frame" x="24" y="20" width="32" height="32"/>
+                        <color key="tintColor" name="keyChar"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="32" id="Fay-e2-5uF"/>
+                            <constraint firstAttribute="height" constant="32" id="Vwp-c3-IiP"/>
+                        </constraints>
+                    </imageView>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Av5-Tu-z7q" userLabel="LinkImageViewPad">
+                        <rect key="frame" x="432" y="21" width="30" height="30"/>
+                        <color key="tintColor" name="keyChar"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="30" id="2Nf-N8-aed"/>
+                            <constraint firstAttribute="height" constant="30" id="7Tb-NH-OcY"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JhP-vS-Bbx" userLabel="TitleLabelPhone">
+                        <rect key="frame" x="50" y="20" width="428" height="32"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="32" id="Dwd-nG-awu"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="MSu-WY-MCY">
-                        <rect key="frame" x="16" y="53" width="26" height="26"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="efA-8g-GFZ" userLabel="IconImageViewPhone">
+                        <rect key="frame" x="16" y="23" width="26" height="26"/>
                         <color key="tintColor" name="keyChar"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="26" id="Fay-e2-5uF"/>
-                            <constraint firstAttribute="height" constant="26" id="Vwp-c3-IiP"/>
+                            <constraint firstAttribute="height" constant="26" id="608-6e-PMb"/>
+                            <constraint firstAttribute="width" constant="26" id="gAQ-fM-xJj"/>
                         </constraints>
                     </imageView>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Av5-Tu-z7q" userLabel="Link Image View">
-                        <rect key="frame" x="446" y="54" width="24" height="24"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Hfl-22-u41" userLabel="LinkImageViewPhone">
+                        <rect key="frame" x="446" y="24" width="24" height="24"/>
                         <color key="tintColor" name="keyChar"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="24" id="2Nf-N8-aed"/>
-                            <constraint firstAttribute="height" constant="24" id="7Tb-NH-OcY"/>
+                            <constraint firstAttribute="width" constant="24" id="G3G-Yp-EYm"/>
+                            <constraint firstAttribute="height" constant="24" id="fqI-gJ-xQb"/>
                         </constraints>
                     </imageView>
                 </subviews>
                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                 <constraints>
+                    <constraint firstItem="JhP-vS-Bbx" firstAttribute="leading" secondItem="efA-8g-GFZ" secondAttribute="trailing" constant="8" id="5YM-fb-hrS"/>
                     <constraint firstItem="MSu-WY-MCY" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="6Yr-Bm-4Cx"/>
+                    <constraint firstItem="Hfl-22-u41" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="86c-El-PQV"/>
+                    <constraint firstItem="Hfl-22-u41" firstAttribute="centerY" secondItem="JhP-vS-Bbx" secondAttribute="centerY" id="DcB-3X-1oU"/>
+                    <constraint firstItem="AJP-R8-VkX" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="IAC-3G-rjq"/>
+                    <constraint firstItem="efA-8g-GFZ" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="KUx-LT-DT3"/>
                     <constraint firstItem="Av5-Tu-z7q" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Nx3-Wr-JYN"/>
-                    <constraint firstAttribute="trailing" secondItem="Av5-Tu-z7q" secondAttribute="trailing" constant="16" id="awi-VI-67k"/>
-                    <constraint firstItem="MSu-WY-MCY" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="k6M-7f-ePY"/>
+                    <constraint firstItem="JhP-vS-Bbx" firstAttribute="centerY" secondItem="efA-8g-GFZ" secondAttribute="centerY" id="Su3-uy-YSF"/>
+                    <constraint firstAttribute="trailing" secondItem="Av5-Tu-z7q" secondAttribute="trailing" constant="24" id="awi-VI-67k"/>
+                    <constraint firstItem="MSu-WY-MCY" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="24" id="k6M-7f-ePY"/>
+                    <constraint firstAttribute="trailing" secondItem="Hfl-22-u41" secondAttribute="trailing" constant="16" id="k7a-3s-pk8"/>
+                    <constraint firstAttribute="trailing" secondItem="JhP-vS-Bbx" secondAttribute="trailing" constant="8" id="nyo-zd-W26"/>
+                    <constraint firstAttribute="bottom" secondItem="AJP-R8-VkX" secondAttribute="bottom" constant="12" id="oDz-rH-aem"/>
                     <constraint firstItem="Av5-Tu-z7q" firstAttribute="centerY" secondItem="AJP-R8-VkX" secondAttribute="centerY" id="qSS-hY-B7w"/>
+                    <constraint firstItem="efA-8g-GFZ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="sCt-IL-18P"/>
                     <constraint firstItem="AJP-R8-VkX" firstAttribute="centerY" secondItem="MSu-WY-MCY" secondAttribute="centerY" id="twY-UQ-o7I"/>
-                    <constraint firstItem="AJP-R8-VkX" firstAttribute="leading" secondItem="MSu-WY-MCY" secondAttribute="trailing" constant="8" id="udY-dz-eEL"/>
+                    <constraint firstItem="AJP-R8-VkX" firstAttribute="leading" secondItem="MSu-WY-MCY" secondAttribute="trailing" constant="12" id="udY-dz-eEL"/>
                     <constraint firstAttribute="trailing" secondItem="AJP-R8-VkX" secondAttribute="trailing" constant="8" id="wI4-UY-kS6"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="iconImageView" destination="MSu-WY-MCY" id="EMy-K1-jZa"/>
-                <outlet property="linkImageView" destination="Av5-Tu-z7q" id="Dq0-4R-6NK"/>
-                <outlet property="titleLabel" destination="AJP-R8-VkX" id="urL-z2-Msc"/>
+                <outlet property="iconImageViewPad" destination="MSu-WY-MCY" id="Tsh-Be-tN5"/>
+                <outlet property="iconImageViewPhone" destination="efA-8g-GFZ" id="Ssk-Ei-LMd"/>
+                <outlet property="linkImageViewPad" destination="Av5-Tu-z7q" id="sNb-CC-nwF"/>
+                <outlet property="linkImageViewPhone" destination="Hfl-22-u41" id="Okg-Vb-Yti"/>
+                <outlet property="titleLabelPad" destination="AJP-R8-VkX" id="SXO-RV-G8N"/>
+                <outlet property="titleLabelPhone" destination="JhP-vS-Bbx" id="Ew9-bi-eRU"/>
             </connections>
-            <point key="canvasLocation" x="265.64885496183206" y="50.70422535211268"/>
+            <point key="canvasLocation" x="265.64885496183206" y="77.464788732394368"/>
         </tableViewCell>
     </objects>
     <resources>
